--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "boxen": "4.2.0",
-    "chalk": "4.1.0"
+    "chalk": "^5.3.0"
   },
   "devDependencies": {
     "standard": "^14.3.4"
